...
                                <color key="backgroundColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="g9U-le-bdO"/>
                                    <constraint firstAttribute="width" constant="60" id="jiJ-ow-dHG"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                <state key="normal" title="..."/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number">
                                        <string key="keyPath">        layer.cornerRadius
</string>
                                        <integer key="value" value="10"/>
                                    </userDefinedRuntimeAttribute>
...
