//
//  FriendDetailsUITest.swift
//  PartyAppUITests
//
//  Created by user1 on 20.07.2018.
//  Copyright © 2018 Piotr Rola. All rights reserved.
//

import XCTest

class FriendDetailsUITest: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testExample() {
        
        sleep(6)
        
        let app = XCUIApplication()
        sleep(8)
        app.buttons["Friends List"].tap()
        app.tables/*@START_MENU_TOKEN@*/.staticTexts["Interested in drinking alcohol"]/*[[".cells.staticTexts[\"Interested in drinking alcohol\"]",".staticTexts[\"Interested in drinking alcohol\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app.navigationBars["Friend details"].buttons["Friends list"].tap()
        app.navigationBars["Friends list"].buttons["Welcome"].tap()
        
        
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
        
    }
    
}
